server/http/css/main.css
/* ... */
#hostSettings label,
#settings label {
    display: inline-block;
    padding-bottom: 2px;
    width: 50%;
}
#creategameok,
#creategamecancel {
    width: 100%;
    display: inline-block;
    padding: 5px;
    margin: 5% auto;
    border: 1px solid black;
    text-align: center;
}
.chatcontainer {
    width: 98%;
    height: 100%;
    overflow: auto;
    padding: 1%;
    margin: 0 auto;
    color: white;
}
.chattitle {
    border: 1px solid white;
    color: white;
    padding: 2px;
    float: left;
    width: 100%%;
}
.chatbody {
    width: 80%;
    border: 1px solid white;
    margin-top: 5px;
    height: 70%;
    float: left;
    padding: 2px;
    overflow: scroll;
    font-size: 10px;
}
.chatroomlist {
    float: left;
    width: 10px;
    border: 1px solid white;
    height: 70%;
    margin-top: 5px;
    margin-left: 10px;
    width: 18%;
    overflow: scroll;
}
.chatcontrolls {
    float: left;
    width: 10%;
    height: 5%;
    margin-top: 5px;
    border: 1px solid white;
}
input#chatinput {
    background: transparent;
    border: 1px solid white;
    margin-top: 5px;
    height: 5%;
    padding: 2px;
    margin-left: .5%;
    width: 69.5%;
    float: left;
}
.chatsubmit {
    border: 1px solid white;
    width: 5%;
    height: 5%;
    float: left;
    margin-top: 5px;
    margin-left: .5%;
}
#gamefilter {
    background: rgba(0, 0, 0, .8);
    width: 30vw;
    font-size: 12px;
    float: right;
    padding: 5px;
    /* height: 92.5vh; */
    padding-top: 28px;
    border: 1px solid black;
    color: white;
    margin-top: 12vh;
}
#gamefilter label {
    display: block;
    width: 100%;
    line-height: 1.5em;
    padding: 0;
    margin-top: 1vh;
}
#gamefilter label select,
#gamefilter label input {
    float: right;
    display: block;
    width: 50%;
}
.incasing {
    padding: 5px;
    border: 1px solid silver;
}
#gamefilter button {
    margin-top: 20px;
    display: inline-block;
}
section#gamelistsection {
    padding-top: 0;
    background: transparent;
}
div#gamelist {
    width: 70vw;
    margin: auto 0;
}
.in-iframe div#gamelist {
    width: 70vw;
    float: left;
    margin: auto;
}
.in-iframe {
    float: left
}
#home {
    overflow: auto;
}
#home article {
    max-width: 920px;
    margin: 0 auto;
    color: white;
    font-family: Roboto, sans-serif;
    margin-top:40px;
}
#news h3 {
    text-align: center;
    
    margin: 0;
    font-weight: 100;
}
#news h2 {

}
.newscontent {
    font-size: .8em;
    text-align: justify;
}
/* =========================================
=================================
   Media Queries
   ========================================================================== */

@media only screen and (min-width: 35em) {}@media print,
(-o-min-device-pixel-ratio: 5/4),
(-webkit-min-device-pixel-ratio: 1.25),
(min-resolution: 120dppx) {}
/* ==========================================================================
   Helper classes
   ========================================================================== */

.ir {
    background-color:transparent;
    border:0;
    overflow:hidden;
    *text-indent:-9999px;
}
.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 150%;
}
.hidden {
    display: none !important;
    visibility: hidden;
}
.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}
.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}
.invisible {
    visibility: hidden;
}
.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}
.clearfix:after {
    clear: both;
}
.clearfix {
    *zoom: 1;
}
/* ==========================================================================
   Print styles
   ========================================================================== */

@media print {
    * {
        background: transparent !important;
        color: #000 !important;
        /* Black prints faster: h5bp.com/s */
        box-shadow: none !important;
        text-shadow: none !important;
    }
    a,
    a:visited {
        text-decoration: underline;
    }
    a[href]:after {
        content: " (" attr(href)")";
    }
    abbr[title]:after {
        content: " (" attr(title)")";
    }
    /*
     * Don't show links for images, or javascript/internal links
     */
    .ir a:after,
    a[href^="javascript:"]:after,
    a[href^="#"]:after {
        content: "";
    }
    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }
    thead {
        display: table-header-group;
        /* h5bp.com/t */
    }
    tr,
    img {
        page-break-inside: avoid;
    }
    img {
        max-width: 100% !important;
    }
    @page {
        margin: 0.5cm;
    }
    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }
    h2,
    h3 {
        page-break-after: avoid;
    }
}

